--- a/WebAPI.Web/WebAPI.Web.csproj
+++ b/WebAPI.Web/WebAPI.Web.csproj
@@ -205,6 +205,7 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -212,12 +213,15 @@
     <Compile Include="Infrastructure\Core\PaginationSet.cs" />
     <Compile Include="Infrastructure\Extensions\EntityExtensions.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
+    <Compile Include="Models\FooterViewModel.cs" />
+    <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Models\PostCategoryViewModel.cs" />
     <Compile Include="Models\PostTagViewModel.cs" />
     <Compile Include="Models\PostViewModel.cs" />
     <Compile Include="Models\ProductCategoryViewModel.cs" />
     <Compile Include="Models\ProductTagViewModel.cs" />
     <Compile Include="Models\ProductViewModel.cs" />
+    <Compile Include="Models\SlideViewModel.cs" />
     <Compile Include="Models\TagViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -309,9 +313,6 @@
     <Content Include="Assets\admin\js\adminlte.js" />
     <Content Include="Assets\admin\js\adminlte.min.js" />
     <Content Include="Assets\admin\js\demo.js" />
-    <Content Include="Assets\admin\js\pages\dashboard.js" />
-    <Content Include="Assets\admin\js\pages\dashboard2.js" />
-    <Content Include="Assets\admin\js\pages\dashboard3.js" />
     <Content Include="Assets\admin\libs\angular-loading-bar\build\loading-bar.css" />
     <Content Include="Assets\admin\libs\angular-loading-bar\build\loading-bar.js" />
     <Content Include="Assets\admin\libs\angular-loading-bar\build\loading-bar.min.css" />
@@ -4619,6 +4620,111 @@
     <Content Include="Assets\admin\libs\toastr\toastr.js" />
     <Content Include="Assets\admin\libs\toastr\toastr.min.css" />
     <Content Include="Assets\admin\libs\toastr\toastr.min.js" />
+    <Content Include="Assets\client\css\bootstrap.min.css" />
+    <Content Include="Assets\client\css\bundle.css" />
+    <Content Include="Assets\client\css\plugin.css" />
+    <Content Include="Assets\client\css\responsive.css" />
+    <Content Include="Assets\client\css\style.css" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont.svg" />
+    <Content Include="Assets\client\fonts\MyriadPro-Bold.svg" />
+    <Content Include="Assets\client\fonts\MyriadPro-Regular.svg" />
+    <Content Include="Assets\client\img\banner\background.png" />
+    <Content Include="Assets\client\img\banner\banner1.jpg" />
+    <Content Include="Assets\client\img\banner\banner11.jpg" />
+    <Content Include="Assets\client\img\banner\banner2.jpg" />
+    <Content Include="Assets\client\img\banner\banner3.jpg" />
+    <Content Include="Assets\client\img\banner\banner5.jpg" />
+    <Content Include="Assets\client\img\banner\banner6.jpg" />
+    <Content Include="Assets\client\img\banner\banner7.jpg" />
+    <Content Include="Assets\client\img\banner\banner8.jpg" />
+    <Content Include="Assets\client\img\banner\banner9.jpg" />
+    <Content Include="Assets\client\img\banner\bannner10.jpg" />
+    <Content Include="Assets\client\img\blog\blog1.jpg" />
+    <Content Include="Assets\client\img\blog\blog10.jpg" />
+    <Content Include="Assets\client\img\blog\blog11.jpg" />
+    <Content Include="Assets\client\img\blog\blog12.jpg" />
+    <Content Include="Assets\client\img\blog\blog13.jpg" />
+    <Content Include="Assets\client\img\blog\blog14.jpg" />
+    <Content Include="Assets\client\img\blog\blog2.jpg" />
+    <Content Include="Assets\client\img\blog\blog3.jpg" />
+    <Content Include="Assets\client\img\blog\blog4.jpg" />
+    <Content Include="Assets\client\img\blog\blog5.jpg" />
+    <Content Include="Assets\client\img\blog\blog6.jpg" />
+    <Content Include="Assets\client\img\blog\blog7.jpg" />
+    <Content Include="Assets\client\img\blog\blog8.jpg" />
+    <Content Include="Assets\client\img\blog\blog9.jpg" />
+    <Content Include="Assets\client\img\blog\tweets.jpeg" />
+    <Content Include="Assets\client\img\brand\brand1.jpg" />
+    <Content Include="Assets\client\img\brand\brand2.jpg" />
+    <Content Include="Assets\client\img\brand\brand3.jpg" />
+    <Content Include="Assets\client\img\brand\brand4.jpg" />
+    <Content Include="Assets\client\img\brand\brand5.jpg" />
+    <Content Include="Assets\client\img\brand\brand6.jpg" />
+    <Content Include="Assets\client\img\cart\cart.jpg" />
+    <Content Include="Assets\client\img\cart\cart17.jpg" />
+    <Content Include="Assets\client\img\cart\cart18.jpg" />
+    <Content Include="Assets\client\img\cart\cart19.jpg" />
+    <Content Include="Assets\client\img\cart\cart2.jpg" />
+    <Content Include="Assets\client\img\cart\cart3.jpg" />
+    <Content Include="Assets\client\img\cart\cart4.jpg" />
+    <Content Include="Assets\client\img\cart\cart5.png" />
+    <Content Include="Assets\client\img\cart\count.png" />
+    <Content Include="Assets\client\img\cart\count2.png" />
+    <Content Include="Assets\client\img\cart\count3.png" />
+    <Content Include="Assets\client\img\cart\span-hot.png" />
+    <Content Include="Assets\client\img\cart\span-new.png" />
+    <Content Include="Assets\client\img\favicon.png" />
+    <Content Include="Assets\client\img\logo\fontlogo.jpg" />
+    <Content Include="Assets\client\img\logo\fontlogo2.jpg" />
+    <Content Include="Assets\client\img\logo\logo.jpg.png" />
+    <Content Include="Assets\client\img\portfolio\port1.jpg" />
+    <Content Include="Assets\client\img\portfolio\port10.jpg" />
+    <Content Include="Assets\client\img\portfolio\port11.jpg" />
+    <Content Include="Assets\client\img\portfolio\port12.jpg" />
+    <Content Include="Assets\client\img\portfolio\port2.jpg" />
+    <Content Include="Assets\client\img\portfolio\port3.jpg" />
+    <Content Include="Assets\client\img\portfolio\port4.jpg" />
+    <Content Include="Assets\client\img\portfolio\port5.jpg" />
+    <Content Include="Assets\client\img\portfolio\port6.jpg" />
+    <Content Include="Assets\client\img\portfolio\port7.jpg" />
+    <Content Include="Assets\client\img\portfolio\port8.jpg" />
+    <Content Include="Assets\client\img\portfolio\port9.jpg" />
+    <Content Include="Assets\client\img\product\product1.jpg" />
+    <Content Include="Assets\client\img\product\product13.jpg" />
+    <Content Include="Assets\client\img\product\product14.jpg" />
+    <Content Include="Assets\client\img\product\product15.jpg" />
+    <Content Include="Assets\client\img\product\product2.jpg" />
+    <Content Include="Assets\client\img\product\product3.jpg" />
+    <Content Include="Assets\client\img\product\product4.jpg" />
+    <Content Include="Assets\client\img\product\product5.jpg" />
+    <Content Include="Assets\client\img\product\product6.jpg" />
+    <Content Include="Assets\client\img\product\product7.jpg" />
+    <Content Include="Assets\client\img\product\product8.jpg" />
+    <Content Include="Assets\client\img\product\product9.jpg" />
+    <Content Include="Assets\client\img\product\productbig.jpg" />
+    <Content Include="Assets\client\img\product\productbig1.jpg" />
+    <Content Include="Assets\client\img\product\productbig2.jpg" />
+    <Content Include="Assets\client\img\services\service1.jpg" />
+    <Content Include="Assets\client\img\services\service2.jpg" />
+    <Content Include="Assets\client\img\services\service3.jpg" />
+    <Content Include="Assets\client\img\services\service4.jpg" />
+    <Content Include="Assets\client\img\ship\about1.jpg" />
+    <Content Include="Assets\client\img\ship\about3.jpg" />
+    <Content Include="Assets\client\img\ship\about4.jpg" />
+    <Content Include="Assets\client\img\ship\nav-left-teal.png" />
+    <Content Include="Assets\client\img\ship\nav-right-teal.png" />
+    <Content Include="Assets\client\img\slider\slider_2.png" />
+    <Content Include="Assets\client\img\slider\slider_3.png" />
+    <Content Include="Assets\client\img\slider\slider_1.png" />
+    <Content Include="Assets\client\img\slider\slider_4.png" />
+    <Content Include="Assets\client\img\visha\papyel.png" />
+    <Content Include="Assets\client\js\ajax-mail.js" />
+    <Content Include="Assets\client\js\bootstrap.min.js" />
+    <Content Include="Assets\client\js\main.js" />
+    <Content Include="Assets\client\js\plugins.js" />
+    <Content Include="Assets\client\js\popper.js" />
+    <Content Include="Assets\client\js\vendor\jquery-1.12.0.min.js" />
+    <Content Include="Assets\client\js\vendor\modernizr-2.8.3.min.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -4644,7 +4750,6 @@
     <Folder Include="app\shared\footer\" />
     <Folder Include="app\shared\navigation\" />
     <Folder Include="App_Data\" />
-    <Folder Include="Assets\client\" />
     <Folder Include="Scripts\plugins\" />
     <Folder Include="UploadFiles\" />
   </ItemGroup>
@@ -5097,11 +5202,34 @@
     <Content Include="Assets\admin\libs\angular-local-stroage\LICENSE" />
     <Content Include="Assets\admin\libs\angular-local-stroage\package.json" />
     <Content Include="Assets\admin\libs\angular-local-stroage\README.md" />
+    <Content Include="ConnectionStrings.config" />
+    <Content Include="AppSettings.config" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont-1.bin" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont-2.bin" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont-3.bin" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont.bin" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Assets\client\fonts\MyriadPro-Bold-1.bin" />
+    <Content Include="Assets\client\fonts\MyriadPro-Bold-2.bin" />
+    <Content Include="Assets\client\fonts\MyriadPro-Bold-3.bin" />
+    <Content Include="Assets\client\fonts\MyriadPro-Bold.bin" />
+    <Content Include="Assets\client\fonts\MyriadPro-Bold.ttf" />
+    <Content Include="Assets\client\fonts\MyriadPro-Regular-1.bin" />
+    <Content Include="Assets\client\fonts\MyriadPro-Regular-2.bin" />
+    <Content Include="Assets\client\fonts\MyriadPro-Regular-3.bin" />
+    <Content Include="Assets\client\fonts\MyriadPro-Regular.bin" />
+    <Content Include="Assets\client\fonts\MyriadPro-Regular.ttf" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
     <Content Include="Scripts\spa\app.js" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Shared\Layouts.cshtml" />
+    <Content Include="resourse\shop-coron.zip" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\Footer.cshtml" />
+    <Content Include="Views\Shared\Header.cshtml" />
+    <Content Include="Views\Shared\Category.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WebAPI.Common\WebAPI.Common.csproj">
