--- a/WebAPI.Web/Web.config
+++ b/WebAPI.Web/Web.config
@@ -9,22 +9,19 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-
-    <add name="GroceryStoreConnection" connectionString="Data Source=BLACKHAT\SQLEXPRESS;Initial Catalog=GroceryStore;integrated security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <connectionStrings configSource="ConnectionStrings.config"></connectionStrings>
+  <appSettings configSource="AppSettings.config"></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true">
+      <!--tất cả module cấp quyền chạy trên IIS-->
+      <remove name="WebDAVModule" />
+    </modules>
     <handlers>
+      <remove name="WebDAV" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
