--- a/WebAPI.Data/WebAPI.Data.csproj
+++ b/WebAPI.Data/WebAPI.Data.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Migrations\202012310326430_Changkey.designer.cs">
       <DependentUpon>202012310326430_Changkey.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101251345513_Add-ImgHotTag-Product.cs" />
+    <Compile Include="Migrations\202101251345513_Add-ImgHotTag-Product.designer.cs">
+      <DependentUpon>202101251345513_Add-ImgHotTag-Product.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
@@ -126,6 +130,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012310326430_Changkey.resx">
       <DependentUpon>202012310326430_Changkey.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101251345513_Add-ImgHotTag-Product.resx">
+      <DependentUpon>202101251345513_Add-ImgHotTag-Product.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
