--- a/WebAPI.Service/WebAPI.Service.csproj
+++ b/WebAPI.Service/WebAPI.Service.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ProductCategoryService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TagService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WebAPI.Common\WebAPI.Common.csproj">
