--- a/WebAPI.Data/WebAPI.Data.csproj
+++ b/WebAPI.Data/WebAPI.Data.csproj
@@ -81,6 +81,10 @@
     <Compile Include="Migrations\202101251345513_Add-ImgHotTag-Product.designer.cs">
       <DependentUpon>202101251345513_Add-ImgHotTag-Product.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102060204390_add-image-Page.cs" />
+    <Compile Include="Migrations\202102060204390_add-image-Page.designer.cs">
+      <DependentUpon>202102060204390_add-image-Page.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
@@ -133,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101251345513_Add-ImgHotTag-Product.resx">
       <DependentUpon>202101251345513_Add-ImgHotTag-Product.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102060204390_add-image-Page.resx">
+      <DependentUpon>202102060204390_add-image-Page.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
