--- a/WebAPI.Data/WebAPI.Data.csproj
+++ b/WebAPI.Data/WebAPI.Data.csproj
@@ -85,8 +85,13 @@
     <Compile Include="Migrations\202102060204390_add-image-Page.designer.cs">
       <DependentUpon>202102060204390_add-image-Page.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102080235194_ContactDetail.cs" />
+    <Compile Include="Migrations\202102080235194_ContactDetail.designer.cs">
+      <DependentUpon>202102080235194_ContactDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ContactDetailRepository.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
@@ -140,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102060204390_add-image-Page.resx">
       <DependentUpon>202102060204390_add-image-Page.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102080235194_ContactDetail.resx">
+      <DependentUpon>202102080235194_ContactDetail.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
