--- a/WebAPI.Web/AppSettings.config
+++ b/WebAPI.Web/AppSettings.config
@@ -5,4 +5,11 @@
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="PageSize" value="5" />
   <add key="MaxPage" value="5" />
+
+  <add key="SMTPHost" value="smtp.gmail.com" />
+  <add key="SMTPPort" value="587" />
+  <add key="FromEmailAddress" value="fsocieto0o@gmail.com" />
+  <add key="FromEmailPassword" value="quochieps2" />
+  <add key="FromName" value="Coron Fashion Shop" />
+  <add key="AdminEmail" value="hiepgakute1019@gmail.com" />
 </appSettings>
