--- a/WebAPI.Data/WebAPI.Data.csproj
+++ b/WebAPI.Data/WebAPI.Data.csproj
@@ -89,10 +89,15 @@
     <Compile Include="Migrations\202102080235194_ContactDetail.designer.cs">
       <DependentUpon>202102080235194_ContactDetail.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102111250252_Feedback.cs" />
+    <Compile Include="Migrations\202102111250252_Feedback.designer.cs">
+      <DependentUpon>202102111250252_Feedback.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ContactDetailRepository.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
+    <Compile Include="Repositories\FeedbackRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -148,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102080235194_ContactDetail.resx">
       <DependentUpon>202102080235194_ContactDetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102111250252_Feedback.resx">
+      <DependentUpon>202102111250252_Feedback.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
