--- a/WebAPI.Web/Web.config
+++ b/WebAPI.Web/Web.config
@@ -4,16 +4,27 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="botDetect" requirePermission="false" type="BotDetect.Configuration.BotDetectConfigurationSection, BotDetect" />
   </configSections>
-  <connectionStrings configSource="ConnectionStrings.config"></connectionStrings>
-  <appSettings configSource="AppSettings.config"></appSettings>
+  <connectionStrings configSource="ConnectionStrings.config">
+  </connectionStrings>
+  <appSettings configSource="AppSettings.config">
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <pages enableSessionState="true">
+      <controls>
+        <add assembly="BotDetect" namespace="BotDetect.Web.UI" tagPrefix="BotDetect" />
+      </controls>
+    </pages>
+    <httpHandlers>
+      <add verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
+    </httpHandlers>
+    <sessionState mode="InProc" cookieless="AutoDetect" timeout="20" sessionIDManagerType="BotDetect.Web.CustomSessionIdManager, BotDetect" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
@@ -26,7 +37,10 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="BotDetectCaptchaHandler" />
+      <add name="BotDetectCaptchaHandler" preCondition="integratedMode" verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
     </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -74,6 +88,10 @@
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.113.0" newVersion="1.0.113.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -92,4 +110,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <botDetect helpLinkEnabled="true" helpLinkMode="image" />
 </configuration>
