--- a/WebAPI.Web/packages.config
+++ b/WebAPI.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Autofac.WebApi2" version="4.0.0" targetFramework="net45" />
   <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
+  <package id="Captcha" version="4.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
@@ -33,6 +34,8 @@
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
