tạo trang đăng kí với captcha

--- a/WebAPI.Web/AppSettings.config
+++ b/WebAPI.Web/AppSettings.config
@@ -12,4 +12,5 @@
   <add key="FromEmailPassword" value="quochieps2" />
   <add key="FromName" value="Coron Fashion Shop" />
   <add key="AdminEmail" value="hiepgakute1019@gmail.com" />
+  <add key="CurrentLink" value="http://localhost:60601/" />
 </appSettings>
