--- a/WebAPI.Data/WebAPI.Data.csproj
+++ b/WebAPI.Data/WebAPI.Data.csproj
@@ -97,8 +97,24 @@
     <Compile Include="Migrations\202102180756494_AddCustomerId.designer.cs">
       <DependentUpon>202102180756494_AddCustomerId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102201029149_modify_orderdetail.cs" />
+    <Compile Include="Migrations\202102201029149_modify_orderdetail.designer.cs">
+      <DependentUpon>202102201029149_modify_orderdetail.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102201324139_RenameTableIdentity.cs" />
+    <Compile Include="Migrations\202102201324139_RenameTableIdentity.designer.cs">
+      <DependentUpon>202102201324139_RenameTableIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102201344289_AddGroupUser.cs" />
+    <Compile Include="Migrations\202102201344289_AddGroupUser.designer.cs">
+      <DependentUpon>202102201344289_AddGroupUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ApplicationGroupRepository.cs" />
+    <Compile Include="Repositories\ApplicationRoleGroupRepository.cs" />
+    <Compile Include="Repositories\ApplicationRoleRepository.cs" />
+    <Compile Include="Repositories\ApplicationUserGroupRepository.cs" />
     <Compile Include="Repositories\ContactDetailRepository.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FeedbackRepository.cs" />
@@ -163,6 +179,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102180756494_AddCustomerId.resx">
       <DependentUpon>202102180756494_AddCustomerId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102201029149_modify_orderdetail.resx">
+      <DependentUpon>202102201029149_modify_orderdetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102201324139_RenameTableIdentity.resx">
+      <DependentUpon>202102201324139_RenameTableIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102201344289_AddGroupUser.resx">
+      <DependentUpon>202102201344289_AddGroupUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
