--- a/WebAPI.Web/packages.config
+++ b/WebAPI.Web/packages.config
@@ -27,8 +27,10 @@
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Facebook" version="4.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Google" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
