--- a/WebAPI.Web/packages.config
+++ b/WebAPI.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="Captcha" version="4.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net45" />
+  <package id="EPPlus" version="4.1.0" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
@@ -23,6 +24,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.3.6" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net45" />
@@ -38,6 +40,7 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net45" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
