--- a/WebAPI.Service/WebAPI.Service.csproj
+++ b/WebAPI.Service/WebAPI.Service.csproj
@@ -63,6 +63,7 @@
     <Compile Include="ContactDetailService.cs" />
     <Compile Include="ErrorService.cs" />
     <Compile Include="FeedbackService.cs" />
+    <Compile Include="FooterService.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="PageService.cs" />
     <Compile Include="PostCategoryService.cs" />
