--- a/WebAPI.Web/WebAPI.Web.csproj
+++ b/WebAPI.Web/WebAPI.Web.csproj
@@ -222,6 +222,8 @@
     <Compile Include="API\ApplicationGroupController.cs" />
     <Compile Include="API\ApplicationRoleController.cs" />
     <Compile Include="API\ApplicationUserController.cs" />
+    <Compile Include="API\FeedbackController.cs" />
+    <Compile Include="API\FooterController.cs" />
     <Compile Include="API\HomeController.cs" />
     <Compile Include="API\PageController.cs" />
     <Compile Include="API\PostCategoryController.cs" />
@@ -248,7 +250,22 @@
     <Content Include="app\components\application_users\applicationUserListController.js" />
     <Content Include="app\components\application_users\applicationUserListView.html" />
     <Content Include="app\components\application_users\applicationUsers.module.js" />
+    <Content Include="app\components\feedback\feedbacks.module.js" />
+    <Content Include="app\components\feedback\feedbacksAddController.js" />
+    <Content Include="app\components\feedback\feedbacksAddView.html" />
+    <Content Include="app\components\feedback\feedbacksEditController.js" />
+    <Content Include="app\components\feedback\feedbacksEditView.html" />
+    <Content Include="app\components\feedback\feedbacksListController.js" />
+    <Content Include="app\components\feedback\feedbacksListView.html" />
+    <Content Include="app\components\footer\footers.module.js" />
+    <Content Include="app\components\footer\footersAddController.js" />
+    <Content Include="app\components\footer\footersAddView.html" />
+    <Content Include="app\components\footer\footersEditController.js" />
+    <Content Include="app\components\footer\footersEditView.html" />
+    <Content Include="app\components\footer\footersListController.js" />
+    <Content Include="app\components\footer\footersListView.html" />
     <Content Include="app\components\home\rootController.js" />
+    <Compile Include="API\SildeController.cs" />
     <Compile Include="API\StatisticController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -7348,7 +7365,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>60601</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:60601/</IISUrl>
+          <IISUrl>http://localhost:60602/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
