--- a/WebAPI.Service/WebAPI.Service.csproj
+++ b/WebAPI.Service/WebAPI.Service.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="ApplicationGroupService.cs" />
     <Compile Include="ApplicationRoleService.cs" />
+    <Compile Include="MenuGroupService.cs" />
     <Compile Include="MenuService.cs" />
     <Compile Include="SlideService.cs" />
     <Compile Include="CommonService.cs" />
