--- a/WebAPI.Web/AppSettings.config
+++ b/WebAPI.Web/AppSettings.config
@@ -1,16 +1,15 @@
 ﻿<appSettings>
-  <add key="webpages:Version" value="3.0.0.0" />
-  <add key="webpages:Enabled" value="false" />
-  <add key="ClientValidationEnabled" value="true" />
-  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  <add key="PageSize" value="5" />
-  <add key="MaxPage" value="5" />
-
-  <add key="SMTPHost" value="smtp.gmail.com" />
-  <add key="SMTPPort" value="587" />
-  <add key="FromEmailAddress" value="fsocieto0o@gmail.com" />
-  <add key="FromEmailPassword" value="quochieps2" />
-  <add key="FromName" value="Coron Fashion Shop" />
-  <add key="AdminEmail" value="hiepgakute1019@gmail.com" />
-  <add key="CurrentLink" value="http://localhost:60601/" />
+	<add key="webpages:Version" value="3.0.0.0" />
+	<add key="webpages:Enabled" value="false" />
+	<add key="ClientValidationEnabled" value="true" />
+	<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="PageSize" value="5" />
+	<add key="MaxPage" value="5" />
+	<add key="SMTPHost" value="smtp.gmail.com" />
+	<add key="SMTPPort" value="587" />
+	<add key="FromEmailAddress" value="fsocieto0o@gmail.com" />
+	<add key="FromEmailPassword" value="*********" />
+	<add key="FromName" value="Coron Fashion Shop" />
+	<add key="AdminEmail" value="hiepgakute1019@gmail.com" />
+	<add key="CurrentLink" value="http://localhost:60601/" />
 </appSettings>
